disabled/gateway-class-traefik-v3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-v3-gatewayclass
spec:
  controllerName: traefik.io/gateway-controller
