disabled/gateway-argocd-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-server-gateway
spec:
  gatewayClassName: traefik-v3-gatewayclass

  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      hostname: argocd.k8s.technicalissues.us
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-server-tls

      allowedRoutes:
        namespaces:
          from: Same
